[tool.poetry]
name = "liquidityfreak"
description = ""
authors = ["sp33dfre4k <sp33dfre4k@skiff.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
web3 = ">=6.14,<6.15"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
web3-ethereum-defi = {version = "^0.25.7", extras = ["data"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
